@@ -1,7 +1,5 @@
 #!/bin/bash
 
-# JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
-
 if [ "${JMX_ENABLED}" == "true" ]; then
     JMX_PATH=${JMX_PATH:-"/data/jmx_javaagent.jar"}
     JMX_PORT=${JMX_PORT:-8081}
@@ -10,8 +8,6 @@ if [ "${JMX_ENABLED}" == "true" ]; then
     JMX_OPTS="-javaagent:${JMX_PATH}=${JMX_PORT}:${JMX_CONFIG}"
 fi
 
-TOMCAT_HOME=${TOMCAT_HOME:-"/usr/local/tomcat/"}
+JAVA_OPTS="${JAVA_OPTS} ${JMX_OPTS}"
 
-JAR_PATH=${TOMCAT_HOME}/start.jar
-
-java ${JAVA_OPTS} ${JMX_OPTS} -jar ${JAR_PATH}
+catalina.sh run
